--- a/GWExtract/GWExtract.csproj
+++ b/GWExtract/GWExtract.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GMATool.cs" />
     <Compile Include="Main.cs">
       <SubType>Form</SubType>
     </Compile>
