--- a/GWTool/GWTool.csproj
+++ b/GWTool/GWTool.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{6E2B07D2-39C5-461B-BAA9-0DC4B40A4A18}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>GWExtract</RootNamespace>
-    <AssemblyName>GWExtract</AssemblyName>
+    <RootNamespace>GWTool</RootNamespace>
+    <AssemblyName>GWTool</AssemblyName>
     <TargetFrameworkVersion>v2.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,7 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="GMATool.cs" />
+    <Compile Include="GMADTool.cs" />
     <Compile Include="Main.cs">
       <SubType>Form</SubType>
     </Compile>
